@@ -15,8 +15,8 @@ extern char szBuildDate[];
 #define MUX_BUILD_DATE szBuildDate
 #endif // MUX_BUILD_DATE
 
-#define MUX_VERSION       "2.7.0.13"         // Version number
-#define MUX_RELEASE_DATE  "2007-NOV-27"      // Source release date
+#define MUX_VERSION       "2.7.0.14"         // Version number
+#define MUX_RELEASE_DATE  "2007-DEC-17"      // Source release date
 
 // Define if this release is qualified as ALPHA or BETA.
 //
